DB erişim , store procedure ile değiştiriliyor

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "database": "Data Source=database.db "
-  }
+   "ConnectionStrings": {
+  "database": "Server=DESKTOP-EVOHUKA\\SQLEXPRESS;Database=BankaSimulasyon;Trusted_Connection=True;TrustServerCertificate=True;"
+}
 }
